SFDC DevOps Test/src/objects/Request__c.object
<CustomObject>
    <description>TOOLKIT - An object that represents a set of features that provides the ability to handle a capability.</description>
    <fields>
        <fullName>Adapt__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of days estimated for Adaptation and Ongoing Support.</description>
        <inlineHelpText>Number of days estimated for Adaptation and Ongoing Support.</inlineHelpText>
        <label>Adapt &amp; Ongoing Support</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BUT__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of days estimated to complete Build and Unit Test phase.</description>
        <inlineHelpText>Number of days estimated to complete Build and Unit Test phase.</inlineHelpText>
        <label>Build</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Build_Total__c</fullName>
        <description>Estimated Level of Effort (Hours) for build of the request</description>
        <label>Build Total</label>
        <summarizedField>Application_Inventory__c.Total_Build__c</summarizedField>
        <summaryForeignKey>Application_Inventory__c.Request__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Business_Benefit_Value__c</fullName>
        <description>Value is calculated by the selection of the Business Benefit field.</description>
        <formula>CASE( 
Business_Benefit__c , 
&quot;HIGH&quot; , 3, 
&quot;MEDIUM&quot;, 2, 
&quot;Low&quot;, 1, 
0 
)</formula>
        <inlineHelpText>Value is calculated by the selection of the Business Benefit field: 
High = 3 
Medium = 2 
Low = 1</inlineHelpText>
        <label>Business Benefit Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Benefit__c</fullName>
        <description>Shows type of benefit which business is going to have from the request</description>
        <inlineHelpText>Low: Does Not Drive Revenue or Reduce Costs 
Medium: Drives Revenue or Reduces Costs (quantify amount, if possible) 
High: Drives Revenue and Reduces Costs (quantify amount for both, if possible)</inlineHelpText>
        <label>Business Benefit</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Capability__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Capability related to the request</description>
        <label>Capability</label>
        <referenceTo>Capability__c</referenceTo>
        <relationshipLabel>Requests</relationshipLabel>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Capacity_Type__c</fullName>
        <description>Category of the request</description>
        <inlineHelpText>Emergency: A known error in existing functionality 
Feature/Function: Enhancement or modification to an existing functionality 
New Capability: New functionality to support process 
Ongoing Maintenance: Activities that need to be performed regularly</inlineHelpText>
        <label>Capacity Type</label>
        <picklist>
            <picklistValues>
                <fullName>Emergency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feature/Function</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Capability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ongoing Maintenance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client_Request_ID__c</fullName>
        <description>Shows Client Request ID</description>
        <label>Client Request ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_Deferred__c</fullName>
        <description>Reason of closing or deferring the request</description>
        <label>Reason Closed/Deferred</label>
        <picklist>
            <controllingField>Status__c</controllingField>
            <picklistValues>
                <fullName>Deferred: Waiting Architecture Availabiity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deferred: Product Enhancement Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deferred: Waiting Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed: Architecturally Not Recommended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed: Satisfied Through Business Process Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed: Canceled by Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed: Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed: Technically Not Feasible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed: Existing Functionality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deferred: Aligned to Future State Capabilities</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Details of the reason of closing or deferring the request</description>
        <label>Reason Closed/Deferred Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cont__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Overall Contingency allowed.</description>
        <inlineHelpText>Overall Contingency allowed in percentage.</inlineHelpText>
        <label>Overall Contingency(%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Country name for Request</description>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aland Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia, Plurinational State of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonaire, Sint Eustatius and Saba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bouvet Island</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Des__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of days estimated for the Design phase.</description>
        <inlineHelpText>Number of days estimated for the Design phase.</inlineHelpText>
        <label>Design</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Design_Total__c</fullName>
        <description>Estimated Level of Effort (Hours) for design of the request</description>
        <label>Design Total</label>
        <summarizedField>Application_Inventory__c.Total_Design__c</summarizedField>
        <summaryForeignKey>Application_Inventory__c.Request__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Estimate_Assumption__c</fullName>
        <description>Any assumptions which were taken during the estimations for the request</description>
        <label>Estimate Assumption</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Functional_Description__c</fullName>
        <description>Functional Description of the request</description>
        <inlineHelpText>Include information about the impacts the functionality will have to the end user. Specifically, what they will see on the interface, how often the data will be updated, etc.</inlineHelpText>
        <label>Functional Description</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Level_3_Process__c</fullName>
        <label>Level 3 Process</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_of_Effort_Value__c</fullName>
        <description>Value is calculated by the Level of Effort formula field</description>
        <formula>if(Level_of_Effort__c = &quot;High&quot;,1, 
if(Level_of_Effort__c = &quot;Medium&quot;,2, 
If(Level_of_Effort__c = &quot;Low&quot;,3, 
0)))</formula>
        <inlineHelpText>Value is calculated by the Level of Effort formula field. 
High = 1 
Medium = 2 
Low = 3</inlineHelpText>
        <label>Level of Effort Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level_of_Effort__c</fullName>
        <description>Shows the category of level of effort required for the request based on total estimate for the request</description>
        <formula>IF(TotEst__c = 0.00, &quot;N/A&quot;, 
IF(TotEst__c &lt;= 8.00, &quot;Low&quot;, 
IF(TotEst__c &gt; 20.00, &quot;High&quot;, 
&quot;Medium&quot;)))</formula>
        <inlineHelpText>Low: Requires Less Than 8 Days of Work Effort 
Medium: Requires 8.01 - 20 Days of Work Effort 
High: Requires More Than 20.01 Days of Work Effort</inlineHelpText>
        <label>Level of Effort</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overall_Priority__c</fullName>
        <description>Shows the priority of the request</description>
        <inlineHelpText>Value is calculated based on the value in the Total Priority Ranking field: 
High = Any value greater than or equal to 2.50 
Medium = Any value between 1.50 and 2.49 
Low = Any value less than 1.50</inlineHelpText>
        <label>Overall Priority</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planned_Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relates each request to a Release or Project.</description>
        <inlineHelpText>This is the suggested release in which the requirement should be deployed.</inlineHelpText>
        <label>Planned Release</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipName>CRM_Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quick_Hit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checks whether the request is quick hit or not</description>
        <inlineHelpText>A request can only be a quick hit if the IT level of effort is “low”, Business priority is “high”, the urgency of having the request is immediate, and the request can be implemented without impacting integration.</inlineHelpText>
        <label>Quick Hit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Regions_Impacted__c</fullName>
        <description>Regions that get impacted due to this requirement.</description>
        <inlineHelpText>Regions that get impacted due to this requirement.</inlineHelpText>
        <label>Regions Impacted</label>
        <picklist>
            <picklistValues>
                <fullName>Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latin America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Regions_Requesting__c</fullName>
        <description>Regions where the request needs to be build</description>
        <label>Regions Requesting</label>
        <picklist>
            <picklistValues>
                <fullName>Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latin America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Related_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Any related request to the request</description>
        <inlineHelpText>Use this field to link duplicate requirements together or to group similar requirements.</inlineHelpText>
        <label>Related Request</label>
        <referenceTo>Request__c</referenceTo>
        <relationshipLabel>Requests</relationshipLabel>
        <relationshipName>CRM_Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Release in which the request will go</description>
        <inlineHelpText>The release in which the request will actually be deployed. If the requirement has not been approved for a release, there should not be a value in this field.</inlineHelpText>
        <label>Committed Release</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipLabel>Requests (Committed Release)</relationshipLabel>
        <relationshipName>Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Removed_From_Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Release from which the request has been removed</description>
        <label>Removed From Release</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipLabel>Requests (Removed From Release)</relationshipLabel>
        <relationshipName>Requirements1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Removed_Release__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identify requests removed from a scheduled release.</description>
        <inlineHelpText>Indicate that a Request was removed from a Release only if it is removed after Design is complete.</inlineHelpText>
        <label>Removed from Release</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Req__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of days estimated for Requirement Gathering.</description>
        <inlineHelpText>Number of days estimated for Requirement Gathering.</inlineHelpText>
        <label>Plan</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Request_Description__c</fullName>
        <description>Gathers further details for requirements.</description>
        <inlineHelpText>Detailed Summary* 
Screen(s) Impacted* 
Field Name(s) &amp; Type(s)* 
Picklist Values 
Calculation 
Dependency 
Workflow/Approval Rules 
Interfacing System Updates 
Interface Frequency 
Data Volumes 
*Indicates information required for all requests!</inlineHelpText>
        <label>Request Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request_Title__c</fullName>
        <description>Captures the requirement title</description>
        <inlineHelpText>Captures the requirement title</inlineHelpText>
        <label>Request Title</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <description>Type of the request</description>
        <inlineHelpText>If you are unsure of the type of request you are submitting, please select Unknown.</inlineHelpText>
        <label>Request Type</label>
        <picklist>
            <picklistValues>
                <fullName>Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Migration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User Story</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Requestor__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Name of the person originally submitting the request.</description>
        <inlineHelpText>Name of the person originally submitting the request.</inlineHelpText>
        <label>Requestor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Requests</relationshipLabel>
        <relationshipName>CRM_Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SIT__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of days estimated for completing SIT.</description>
        <inlineHelpText>Number of days estimated for completing SIT.</inlineHelpText>
        <label>Test</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the request</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Identify: New Requirement</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Identify: Submit for Business Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Identify: Deferred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consolidate: Approve to Estimate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consolidate: Level of Effort Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approve: Approved to Deploy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Release: Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Release: Build</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Release: Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Release: SIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Release: UAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Release: Build Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Release: Test Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Close: Deployed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Close: Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Close: Duplicate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>System_Impacted__c</fullName>
        <description>Systems which gets impacted from the request</description>
        <inlineHelpText>Systems that get impacted due to this requirement.</inlineHelpText>
        <label>Systems Impacted</label>
        <picklist>
            <picklistValues>
                <fullName>Business Objects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Master Database (CMD)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise Data Warehouse (EDW)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outlook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STARS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Systems Impacted</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Technical_Description__c</fullName>
        <description>Technical description of the request</description>
        <label>Technical Description</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Test_Case__c</fullName>
        <description>Test case for the request</description>
        <label>Test Case</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Test_Total__c</fullName>
        <description>Estimated Level of Effort (Hours) for testing of the request</description>
        <label>Test Total</label>
        <summarizedField>Application_Inventory__c.Total_Test__c</summarizedField>
        <summaryForeignKey>Application_Inventory__c.Request__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotEst__c</fullName>
        <description>Total estimated value.</description>
        <formula>( Req__c + Des__c + BUT__c + SIT__c + UAT__c + TrnDep__c + Adapt__c )*
( 1+Cont__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total estimated value.</inlineHelpText>
        <label>Total Estimate (Bottom Up)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Actual_Level_of_Effort__c</fullName>
        <description>Total actual level of effort (in Hours) taken in completing the request (i.e. time taken in plan, design, build, test, UAT, deploy &amp; support)</description>
        <label>Total Actual Level of Effort</label>
        <summarizedField>Actual_Level_of_Effort__c.Total_Actual_Level_of_Effort__c</summarizedField>
        <summaryForeignKey>Actual_Level_of_Effort__c.Requirement__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Effort_Variance__c</fullName>
        <description>Difference in Estimated Level of effort &amp; Actual level of effort</description>
        <formula>Total_Actual_Level_of_Effort__c - TotEst__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Effort Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Estimate_Bottom_Up__c</fullName>
        <description>Total estimated level of effort for build, design &amp; test of the request</description>
        <formula>Build_Total__c + Design_Total__c + Test_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Solution Capacity Estimate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Priority_Ranking__c</fullName>
        <description>Priority ranking of the request based on Business benefit, Urgency of request, User impact &amp; LOE</description>
        <formula>( Business_Benefit_Value__c  +  Urgency_of_Request_Value__c  +  User_Impact_of_Change_Value__c  +  Level_of_Effort_Value__c  )  / 4</formula>
        <label>Total Priority Ranking</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total number of days.</description>
        <inlineHelpText>Total number of days estimated.</inlineHelpText>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TrnDep__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of days estimated for Training and Deploying.</description>
        <inlineHelpText>Number of days estimated for Training and Deploying.</inlineHelpText>
        <label>Deploy</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UAT__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of days estimated to complete UAT.</description>
        <inlineHelpText>Number of days estimated to complete UAT.</inlineHelpText>
        <label>UAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Urgency_of_Request_Value__c</fullName>
        <description>Value is calculated by the selection of the Urgency of Request field.</description>
        <formula>CASE( 
Urgency_of_Request__c , 
&quot;HIGH&quot; , 3, 
&quot;MEDIUM&quot;, 2, 
&quot;Low&quot;, 1, 
0 
)</formula>
        <inlineHelpText>Value is calculated by the selection of the Urgency of Request field: 
High = 3 
Medium = 2 
Low = 1</inlineHelpText>
        <label>Urgency of Request Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Urgency_of_Request__c</fullName>
        <description>Urgency of request</description>
        <inlineHelpText>Low: Not required within the next 90 days to enable a business process 
Medium: Required within the next 46 – 90 days to enable a business process 
High: Required within the next 30 – 45 days to enable a business process</inlineHelpText>
        <label>Urgency of Request</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Use_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Use Case</label>
        <referenceTo>Use_Case__c</referenceTo>
        <relationshipLabel>Requests</relationshipLabel>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_Impact_of_Change_Value__c</fullName>
        <description>Value is calculated by the User Impact of Change field.</description>
        <formula>CASE( 
User_Impact_of_Change__c , 
&quot;High&quot;,1, 
&quot;Medium&quot;,2, 
&quot;Low&quot;, 3, 
0 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Value is calculated by the User Impact of Change field: 
High = 1 
Medium = 2 
Low = 3</inlineHelpText>
        <label>User Impact of Change Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Impact_of_Change__c</fullName>
        <description>User impact from the request</description>
        <inlineHelpText>Low: Will Significantly Impact Users (high degree of adoption with significant effort) 
Medium: Will Moderately Impact Users (high degree of adoption with moderate effort) 
High: Will Minimally Impact Users (high degree of adoption with minimal effort)</inlineHelpText>
        <label>User Impact of Change</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Story</label>
        <referenceTo>User_Story__c</referenceTo>
        <relationshipLabel>Requests</relationshipLabel>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Request_Title__c</columns>
        <columns>Related_Request__c</columns>
        <columns>Total_Priority_Ranking__c</columns>
        <columns>Status__c</columns>
        <columns>Capability__c</columns>
        <columns>Release__c</columns>
        <columns>Planned_Release__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CPQ_Requests</fullName>
        <columns>NAME</columns>
        <columns>Client_Request_ID__c</columns>
        <columns>Capability__c</columns>
        <columns>Request_Description__c</columns>
        <columns>Request_Type__c</columns>
        <columns>Requestor__c</columns>
        <columns>Status__c</columns>
        <columns>Total_Priority_Ranking__c</columns>
        <columns>TotEst__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Release__c</field>
            <operation>equals</operation>
            <value>CPQ</value>
        </filters>
        <label>CPQ Requests</label>
    </listViews>
    <listViews>
        <fullName>Requirements_to_Correct</fullName>
        <columns>NAME</columns>
        <columns>Request_Title__c</columns>
        <columns>Request_Description__c</columns>
        <columns>Request_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Release__c</columns>
        <columns>Related_Request__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Release__c</field>
            <operation>equals</operation>
            <value>Wave 1</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Identify: New Requirement</value>
        </filters>
        <label>Requirements to Correct</label>
    </listViews>
</CustomObject>